# vulkan_tutorial

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  setup.bat
doc/: 01_Overview.md  02_Development_environment.md  07_Depth_buffering.md  08_Loading_models.md  09_Generating_Mipmaps.md
doc/03_Drawing_a_triangle/: 04_Swap_chain_recreation.md
doc/03_Drawing_a_triangle/00_Setup/: 00_Base_code.md  01_Instance.md  02_Validation_layers.md  03_Physical_devices_and_queue_families.md  04_Logical_device_and_queues.md
doc/03_Drawing_a_triangle/01_Presentation/: 00_Window_surface.md  01_Swap_chain.md  02_Image_views.md
doc/03_Drawing_a_triangle/02_Graphics_pipeline_basics/: 00_Introduction.md  01_Shader_modules.md  02_Fixed_functions.md  03_Render_passes.md  04_Conclusion.md
doc/03_Drawing_a_triangle/03_Drawing/: 00_Framebuffers.md  01_Command_buffers.md  02_Rendering_and_presentation.md  03_Frames_in_flight.md
doc/04_Vertex_buffers/: 00_Vertex_input_description.md  01_Vertex_buffer_creation.md  02_Staging_buffer.md  03_Index_buffer.md
doc/05_Uniform_buffers/: 00_Descriptor_set_layout_and_buffer.md  01_Descriptor_pool_and_sets.md
doc/06_Texture_mapping/: 00_Images.md  01_Image_view_and_sampler.md  02_Combined_image_sampler.md
doc/courses/18_Ray_tracing/: 00_Overview.md  01_Dynamic_rendering.md  02_Acceleration_structures.md  03_Ray_query_shadows.md  04_TLAS_animation.md  05_Shadow_transparency.md  06_Reflections.md  07_Conclusion.md
src/: main.cpp
